# gpu-inference-pipeline

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: benchmark.py
src/gpu_inference_pipeline/: __init__.py  app.py  runtime.py
tests/: test_runtime.py
