[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-inference-pipeline"
version = "0.1.0"
description = "Production-style AI inference service with ONNX-ready runtime, FastAPI, metrics, Docker, and benchmarks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "numpy>=1.24",
  "prometheus-client>=0.20",
  "pydantic>=2.7",
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
onnx = ["onnxruntime>=1.17"]
gpu = ["onnxruntime-gpu>=1.17"]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
